panel-title h3 to h2

--- a/gettingstarted.html
+++ b/gettingstarted.html
@@ -21,7 +21,7 @@ base_url: "./"
       <div class="col-xs-7">
         <div class="panel panel-default">
           <div class="panel-heading" id="requirements">
-            <h3 class="panel-title">System Requirements</h3>
+            <h2 class="panel-title">System Requirements</h2>
           </div>
           <div class="panel-body">
             <p class="lead">Client:</p>
@@ -55,7 +55,7 @@ base_url: "./"
           </div>
 
           <div class="panel-heading" id="install">
-            <h3 class="panel-title">Install</h3>
+            <h2 class="panel-title">Install</h2>
           </div>
           <div class="panel-body">
             <p>To get MacPatch up and running first clone the project and review the "MacPatch – Server Install.pdf" file in the docs folder.</p>
@@ -65,15 +65,15 @@ git clone https://github.com/SMSG-MAC-DEV/MacPatch.git</pre>
           </div>
 
           <div class="panel-heading" id="sysdiagram">
-            <h3 class="panel-title">System diagram</h3>
+            <h2 class="panel-title">System diagram</h2>
           </div>
           <div class="panel-body">
             <img src="{{ page.base_url }}images/macpatch_env.png" alt="..." class="img-responsive">
-            <small><a href="{{ page.base_url }}images/macpatch_env.png" target="_blank">View full size image</a></small>
+            <small><a href="{{ page.base_url }}images/macpatch_env.png" target="_blank">View full size</a></small>
           </div>
 
           <div class="panel-heading" id="demo-vid">
-            <h3 class="panel-title">Demo video</h3>
+            <h2 class="panel-title">Demo video</h2>
           </div>
           <div class="panel-body">
             <p>This video is hosted on github</p>
@@ -83,7 +83,7 @@ git clone https://github.com/SMSG-MAC-DEV/MacPatch.git</pre>
           </div>
 
           <div class="panel-heading" id="license">
-            <h3 class="panel-title">License</h3>
+            <h2 class="panel-title">License</h2>
           </div>
           <div class="panel-body">
             <p>MacPatch is available under the GNU GPLv2 license. See the <a href="https://github.com/SMSG-MAC-DEV/MacPatch/blob/master/LICENSE">LICENSE</a> file for more info.</p>
