--- a/gettingstarted.html
+++ b/gettingstarted.html
@@ -21,7 +21,7 @@ base_url: "./"
       <div class="col-xs-7">
         <div class="panel panel-default">
           <div class="panel-heading" id="requirements">
-            <h2 class="panel-title">System Requirements</h2><a href="#content">go to top</a>
+            <h2 class="panel-title">System Requirements</h2><a class="pull-right" href="#content">go to top</a>
           </div>
           <div class="panel-body">
             <p class="lead">Client:</p>
