--- a/gettingstarted.html
+++ b/gettingstarted.html
@@ -21,7 +21,8 @@ base_url: "./"
       <div class="col-xs-7">
         <div class="panel panel-default">
           <div class="panel-heading" id="requirements">
-            <h2 class="panel-title">System Requirements <a class="pull-right" href="#content">go to top</a></h2>
+            <h2 class="panel-title">System Requirements</h2>
+            <small><a class="pull-right" href="#content">go to top</a></small>
           </div>
           <div class="panel-body">
             <p class="lead">Client:</p>
