added go to top in all panels

--- a/gettingstarted.html
+++ b/gettingstarted.html
@@ -59,6 +59,7 @@ base_url: "./"
             <h2 class="panel-title">Install</h2>
           </div>
           <div class="panel-body">
+            <small><a class="pull-right" href="#content">go to top</a></small>
             <p>To get MacPatch up and running first clone the project and review the "MacPatch – Server Install.pdf" file in the docs folder.</p>
             <pre>mkdir -p /Library/MacPatch/tmp
 cd /Library/MacPatch/tmp
@@ -69,6 +70,7 @@ git clone https://github.com/SMSG-MAC-DEV/MacPatch.git</pre>
             <h2 class="panel-title">System diagram</h2>
           </div>
           <div class="panel-body">
+            <small><a class="pull-right" href="#content">go to top</a></small>
             <img src="{{ page.base_url }}images/macpatch_env.png" alt="..." class="img-responsive">
             <small><a href="{{ page.base_url }}images/macpatch_env.png" target="_blank">View full size</a></small>
           </div>
@@ -77,6 +79,7 @@ git clone https://github.com/SMSG-MAC-DEV/MacPatch.git</pre>
             <h2 class="panel-title">Demo video</h2>
           </div>
           <div class="panel-body">
+            <small><a class="pull-right" href="#content">go to top</a></small>
             <p>This video is hosted on github</p>
             <video id="sfcatalog" class="video-js vjs-default-skin vjs-big-play-centered" data-setup='{"controls": true, "preload": "auto", "width": "640", "height": "364"}'>
              <source src="{{ page.base_url }}vids/sfcatalog.mp4" type='video/mp4' />
@@ -87,6 +90,7 @@ git clone https://github.com/SMSG-MAC-DEV/MacPatch.git</pre>
             <h2 class="panel-title">License</h2>
           </div>
           <div class="panel-body">
+            <small><a class="pull-right" href="#content">go to top</a></small>
             <p>MacPatch is available under the GNU GPLv2 license. See the <a href="https://github.com/SMSG-MAC-DEV/MacPatch/blob/master/LICENSE">LICENSE</a> file for more info.</p>
           </div>
 
