updated sys reqs

--- a/gettingstarted.html
+++ b/gettingstarted.html
@@ -33,12 +33,12 @@ base_url: "./"
             
             <p class="lead">Server:</p>
             <ul>
-              <li>Mac OS X or Mac OS X Server 10.7 or higher.</li>
-              <li>Intel, PPC is not supported.</li>
-              <li>4GB of RAM, 8GB is recommended.</li>
+              <li>Mac OS X 10.7 or higher.</li>
+              <li>Linuz (RHEL & Ubuntu)</li>
+              <li>8GB RAM.</li>
+              <li>120GB of free disk space</li>
               <li>Java 1.6 or higher.</li>
               <li>MySQL version 5.1 or higher. MySQL 5.5 or 5.6 is recommended.</li>
-              <li>Xcode 4.3 or higher.</li>
             </ul>
 
             <p><h5><em>Java 7 Issue</em></h5></p>
