updated features and v2.5

--- a/gettingstarted.html
+++ b/gettingstarted.html
@@ -11,6 +11,8 @@ base_url: "./"
     <div class="row">
       <div class="col-xs-2 col-xs-offset-1">
         <ul class="nav nav-sidebar">
+          <li><a href="#features">Features</a></li>
+          <li><a href="#v2-5beta">Version 2.5.0 Beta</a></li>
           <li><a href="#requirements">System requirements</a></li>
           <li><a href="#install">Install</a></li>
           <li><a href="#sysdiagram">System diagram</a></li>
@@ -19,6 +21,39 @@ base_url: "./"
         </ul>
       </div>
       <div class="col-xs-7">
+        <div class="panel-heading" id="features">
+          <h2 class="panel-title">Features</h2>
+        </div>
+        <div class="panel-body">
+          <small><a class="pull-right" href="#content">go to top</a></small>
+          <ul>
+            <li>Apple Software update server support</li>
+            <li>Custom patch creation</li>
+            <li>Custom patch groups</li>
+            <li>Patch baselines</li>
+            <li>Client reboot notification</li>
+            <li>Inventory collection</li>
+            <li>Basic reporting</li>
+            <li>End user self patch</li>
+            <li>Software catalog</li>
+          </ul>
+        </div>
+
+         <div class="panel-heading" id="v2-5beta">
+          <h2 class="panel-title">Version 2.5.0 Beta</h2>
+        </div>
+        <div class="panel-body">
+          <small><a class="pull-right" href="#content">go to top</a></small>
+          <p class="lead">What's New</p>
+          <ul>
+            <li>Power management</li>
+            <li>Mac OS X Profiles support</li>
+            <li>More inventory</li>
+            <li>New Web Admin Console</li>
+            <li>Linux server support</li>
+          </ul>
+        </div>
+
         <div class="panel panel-default">
           <div class="panel-heading" id="requirements">
             <h2 class="panel-title">System Requirements</h2>
