--- a/gettingstarted.html
+++ b/gettingstarted.html
@@ -115,7 +115,7 @@ git clone https://github.com/SMSG-MAC-DEV/MacPatch.git</pre>
           </div>
           <div class="panel-body">
             <small><a class="pull-right" href="#content">go to top</a></small>
-            <p>This video is hosted on github</p>
+            <p>Screen shots</p>
             
           </div>
 
