added screen shots

--- a/gettingstarted.html
+++ b/gettingstarted.html
@@ -115,7 +115,82 @@ git clone https://github.com/SMSG-MAC-DEV/MacPatch.git</pre>
           </div>
           <div class="panel-body">
             <small><a class="pull-right" href="#content">go to top</a></small>
-            <p>Screen shots</p>
+
+            <a href="#" data-toggle="modal" data-target=".pop-up-1">
+              <img src="{{ page.base_url }}images/screencap-selfpatch.png" width="150" class="img-responsive img-rounded center-block" alt="">
+            </a>
+            <!--  Modal content for the mixer image example -->
+            <div class="modal fade pop-up-1" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel-1" aria-hidden="true">
+              <div class="modal-dialog modal-lg">
+                <div class="modal-content">
+
+                  <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+                    <h4 class="modal-title" id="myLargeModalLabel-1">Self Patch</h4>
+                  </div>
+                  <div class="modal-body">
+                  <img src="{{ page.base_url }}images/screencap-selfpatch.png" class="img-responsive img-rounded center-block" alt="">
+                  </div>
+                </div><!-- /.modal-content -->
+              </div><!-- /.modal-dialog -->
+            </div><!-- /.modal mixer image -->
+
+            <a href="#" data-toggle="modal" data-target=".pop-up-2">
+              <img src="{{ page.base_url }}images/screencap-selfpatch-complete.png" width="150" class="img-responsive img-rounded center-block" alt="">
+            </a>
+            <!--  Modal content for the mixer image example -->
+            <div class="modal fade pop-up-2" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel-2" aria-hidden="true">
+              <div class="modal-dialog modal-lg">
+                <div class="modal-content">
+
+                  <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+                    <h4 class="modal-title" id="myLargeModalLabel-2">Self Patch</h4>
+                  </div>
+                  <div class="modal-body">
+                  <img src="{{ page.base_url }}images/screencap-selfpatch-complete.png" class="img-responsive img-rounded center-block" alt="">
+                  </div>
+                </div><!-- /.modal-content -->
+              </div><!-- /.modal-dialog -->
+            </div><!-- /.modal mixer image -->
+
+            <a href="#" data-toggle="modal" data-target=".pop-up-3">
+              <img src="{{ page.base_url }}images/screencap-catalog.png" width="150" class="img-responsive img-rounded center-block" alt="">
+            </a>
+            <!--  Modal content for the mixer image example -->
+            <div class="modal fade pop-up-3" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel-3" aria-hidden="true">
+              <div class="modal-dialog modal-lg">
+                <div class="modal-content">
+
+                  <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+                    <h4 class="modal-title" id="myLargeModalLabel-3">Software Catalog</h4>
+                  </div>
+                  <div class="modal-body">
+                  <img src="{{ page.base_url }}images/screencap-catalog.png" class="img-responsive img-rounded center-block" alt="">
+                  </div>
+                </div><!-- /.modal-content -->
+              </div><!-- /.modal-dialog -->
+            </div><!-- /.modal mixer image -->
+
+            <a href="#" data-toggle="modal" data-target=".pop-up-4">
+              <img src="{{ page.base_url }}images/screencap-webadmin.png" width="150" class="img-responsive img-rounded center-block" alt="">
+            </a>
+            <!--  Modal content for the mixer image example -->
+            <div class="modal fade pop-up-4" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel-4" aria-hidden="true">
+              <div class="modal-dialog modal-lg">
+                <div class="modal-content">
+
+                  <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+                    <h4 class="modal-title" id="myLargeModalLabel-4">Web Admin Console</h4>
+                  </div>
+                  <div class="modal-body">
+                  <img src="{{ page.base_url }}images/screencap-webadmin.png" class="img-responsive img-rounded center-block" alt="">
+                  </div>
+                </div><!-- /.modal-content -->
+              </div><!-- /.modal-dialog -->
+            </div><!-- /.modal mixer image -->
             
           </div>
 
