--- a/gettingstarted.html
+++ b/gettingstarted.html
@@ -120,7 +120,7 @@ git clone https://github.com/SMSG-MAC-DEV/MacPatch.git</pre>
               <div class="col-xs-6">
                 <a href="#" data-toggle="modal" data-target=".pop-up-1">
                   <img src="{{ page.base_url }}images/screencap-selfpatch.png" width="300" class="img-responsive img-rounded center-block" alt="">
-                  <small>Self Patch application.</small>
+                  <small class="text-center">Self Patch application.</small>
                 </a>
                 <!--  Modal content for the mixer image example -->
                 <div class="modal fade pop-up-1" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel-1" aria-hidden="true">
@@ -140,7 +140,7 @@ git clone https://github.com/SMSG-MAC-DEV/MacPatch.git</pre>
 
                 <a href="#" data-toggle="modal" data-target=".pop-up-2">
                   <img src="{{ page.base_url }}images/screencap-selfpatch-complete.png" width="300" class="img-responsive img-rounded center-block" alt="">
-                  <small>Self Patch, no patches found.</small>
+                  <small class="text-center">Self Patch, no patches found.</small>
                 </a>
                 <!--  Modal content for the mixer image example -->
                 <div class="modal fade pop-up-2" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel-2" aria-hidden="true">
@@ -162,7 +162,7 @@ git clone https://github.com/SMSG-MAC-DEV/MacPatch.git</pre>
               <div class="col-xs-6">
                 <a href="#" data-toggle="modal" data-target=".pop-up-3">
                   <img src="{{ page.base_url }}images/screencap-catalog.png" width="300" class="img-responsive img-rounded center-block" alt="">
-                  <small>Software Catalog.</small>
+                  <small class="text-center">Software Catalog.</small>
                 </a>
                 <!--  Modal content for the mixer image example -->
                 <div class="modal fade pop-up-3" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel-3" aria-hidden="true">
@@ -182,7 +182,7 @@ git clone https://github.com/SMSG-MAC-DEV/MacPatch.git</pre>
 
                 <a href="#" data-toggle="modal" data-target=".pop-up-4">
                   <img src="{{ page.base_url }}images/screencap-webadmin.png" width="300" class="img-responsive img-rounded center-block" alt="">
-                  <small>Web Admin Console.</small>
+                  <small class="text-center">Web Admin Console.</small>
                 </a>
                 <!--  Modal content for the mixer image example -->
                 <div class="modal fade pop-up-4" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel-4" aria-hidden="true">
