--- a/gettingstarted.html
+++ b/gettingstarted.html
@@ -121,7 +121,7 @@ git clone https://github.com/SMSG-MAC-DEV/MacPatch.git</pre>
                 <a href="#" data-toggle="modal" data-target=".pop-up-1">
                   <img src="{{ page.base_url }}images/screencap-selfpatch.png" width="300" class="img-responsive img-rounded center-block" alt="">
                 </a>
-                <p><small class="text-center">Self Patch application.</small></p>
+                <p class="text-center"><small>Self Patch application.</small></p>
                 <!--  Modal content for the mixer image example -->
                 <div class="modal fade pop-up-1" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel-1" aria-hidden="true">
                   <div class="modal-dialog modal-lg">
@@ -141,7 +141,7 @@ git clone https://github.com/SMSG-MAC-DEV/MacPatch.git</pre>
                 <a href="#" data-toggle="modal" data-target=".pop-up-2">
                   <img src="{{ page.base_url }}images/screencap-selfpatch-complete.png" width="300" class="img-responsive img-rounded center-block" alt="">
                 </a>
-                <p><small class="text-center">Self Patch, no patches found.</small></p>
+                <p class="text-center"><small>Self Patch, no patches found.</small></p>
                 <!--  Modal content for the mixer image example -->
                 <div class="modal fade pop-up-2" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel-2" aria-hidden="true">
                   <div class="modal-dialog modal-lg">
@@ -163,7 +163,7 @@ git clone https://github.com/SMSG-MAC-DEV/MacPatch.git</pre>
                 <a href="#" data-toggle="modal" data-target=".pop-up-3">
                   <img src="{{ page.base_url }}images/screencap-catalog.png" width="300" class="img-responsive img-rounded center-block" alt="">
                 </a>
-                <p><small class="text-center">Software Catalog.</small></p>
+                <p class="text-center"><small>Software Catalog.</small></p>
                 <!--  Modal content for the mixer image example -->
                 <div class="modal fade pop-up-3" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel-3" aria-hidden="true">
                   <div class="modal-dialog modal-lg">
@@ -183,7 +183,7 @@ git clone https://github.com/SMSG-MAC-DEV/MacPatch.git</pre>
                 <a href="#" data-toggle="modal" data-target=".pop-up-4">
                   <img src="{{ page.base_url }}images/screencap-webadmin.png" width="300" class="img-responsive img-rounded center-block" alt="">
                 </a>
-                <p><small class="text-center">Web Admin Console.</small></p>
+                <p class="text-center"><small>Web Admin Console.</small></p>
                 <!--  Modal content for the mixer image example -->
                 <div class="modal fade pop-up-4" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel-4" aria-hidden="true">
                   <div class="modal-dialog modal-lg">
