--- a/gettingstarted.html
+++ b/gettingstarted.html
@@ -17,7 +17,6 @@ base_url: "./"
           <li><a href="#install">Install</a></li>
           <li><a href="#sysdiagram">System diagram</a></li>
           <li><a href="#screenshots">Screen shots</a></li>
-          <li><a href="#license">License</a></li>
         </ul>
       </div>
       <div class="col-xs-7">
@@ -200,15 +199,7 @@ git clone https://github.com/SMSG-MAC-DEV/MacPatch.git</pre>
                   </div><!-- /.modal-dialog -->
                 </div><!-- /.modal mixer image -->
             </div>
-          </div>
-
-          <div class="panel-heading" id="license">
-            <h2 class="panel-title">License</h2>
-          </div>
-          <div class="panel-body">
-            <small><a class="pull-right" href="#content">go to top</a></small>
-            <p>MacPatch is available under the GNU GPLv2 license. See the <a href="https://github.com/SMSG-MAC-DEV/MacPatch/blob/master/LICENSE">LICENSE</a> file for more info.</p>
-          </div>
+          </div><!-- /row -->
 
         </div>
       </div>
