fixed closing </div>'s

--- a/gettingstarted.html
+++ b/gettingstarted.html
@@ -198,11 +198,11 @@ git clone https://github.com/SMSG-MAC-DEV/MacPatch.git</pre>
                     </div><!-- /.modal-content -->
                   </div><!-- /.modal-dialog -->
                 </div><!-- /.modal mixer image -->
-            </div>
-          </div><!-- /row -->
-
-        </div>
-      </div>
-    </div>
-  </div>
+              </div>
+            </div><!-- /row -->
+          </div><!-- /panel body -->
+        </div><!-- /panel -->
+      </div><!-- /col-sx-7 -->
+    </div><!-- /row -->
+  </div><!-- /container -->
 </div> <!-- /container -->
