changed content width

--- a/quickstart-osx.html
+++ b/quickstart-osx.html
@@ -6,7 +6,7 @@ base_url: "./"
 ---
 
 
-<div class="container-full" id="content">
+<div class="container" id="content">
     <h1>MacPatch - Quick Start Guide for Mac OS X</h1>
 
     <p>Version 1.0 for MacPatch v2.5.x</p>
