--- a/documentation.html
+++ b/documentation.html
@@ -20,6 +20,7 @@ base_url: "./"
           <li><a href="#build-client">Building the MacPatch client software</a></li>
           <li><a href="#web-admin">Web Admin setup</a></li>
           <li><a href="#backup">Backup</a></li>
+          <li><a href="{{ page.base_url }}quickstart-osx.html">Quick Start - OSX</a></li>
         </ul>
       </div>
       <div class="col-xs-7">
