--- a/documentation_bak.html
+++ b/documentation_bak.html
@@ -1,79 +1,11 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <link rel="shortcut icon" href="./docs-assets/ico/favicon.png">
+---
+title: Docs
+layout: default
+slug: documentation
+base_url: "./"
+---
 
-    <title></title>
-
-    <!-- Bootstrap core CSS -->
-    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
-
-    <!-- Custom styles for this template -->
-    <link href="./custom/css/custom.css" rel="stylesheet">
-    <link rel="stylesheet" href="./font-awesome/css/font-awesome.min.css">
-
-    <link href="http://vjs.zencdn.net/4.3/video-js.css" rel="stylesheet">
-    <script src="http://vjs.zencdn.net/4.3/video.js"></script>
-
-    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-      <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
-    <![endif]-->
-  </head>
-
-  <body>
-    <!-- Static navbar -->
-<header class="navbar navbar-default navbar-fixed-top navbar-custom" role="navigation">
-  <div class="container">
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <a class="navbar-brand" href="#"></a>
-    </div>
-    <div class="navbar-collapse collapse">
-      <ul class="nav navbar-nav">
-        <li> 
-          <a href="./index.html"> 
-            <i class="fa fa-home fa-lg"></i> 
-          </a>
-        </li>
-        <li> 
-          <a href="./gettingstarted.html">
-            Overview
-          </a>
-        </li>
-        <li class="active"> 
-          <a href="./documentation.html">
-            Documentation
-          </a>
-        </li>
-        <li>
-          <a href="https://github.com/SMSG-MAC-DEV/MacPatch">
-            <i class="fa fa-github fa-lg"></i> 
-          </a>
-        </li>
-      </ul>
-      <ul class="nav navbar-nav navbar-right">
-        <!-- <li><a href="./about.html">About</a></li>
-        <li><a href="./contact.html">Contact</a></li> -->
-      </ul>
-    </div><!--/.nav-collapse -->
-  </div>
-</header>
-
-
-    <!-- Page content -->
-    <div class="container-fluid" id="content">
+<div class="container-fluid" id="content">
   <br><br>
   <div class="container-fluid">
     <div class="row">
@@ -88,7 +20,6 @@
           <li><a href="#build-client">Building the MacPatch client software</a></li>
           <li><a href="#web-admin">Web Admin setup</a></li>
           <li><a href="#backup">Backup</a></li>
-          <li><a href="./quickstart-osx.html">Quick Start - OSX</a></li>
         </ul>
       </div>
       <div class="col-xs-7">
@@ -302,21 +233,3 @@ If you choose to run your own Apple SoftwareUpdate server it is recommended to i
     </div>
   </div>
 </div> <!-- /container -->
-
-    <!-- Page footer -->
-    <footer>
-      <div class="row">
-        <div class="col-sm-10 col-sm-offset-1">
-          <p>MacPatch is available under the GNU GPLv2 license. See the <a href="https://github.com/SMSG-MAC-DEV/MacPatch/blob/master/LICENSE">LICENSE</a> file for more info.</p>
-        </div>
-      </div>
-    </footer>
-    
-    <!-- Bootstrap core JavaScript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script src="./custom/js/custom.js" type="text/javascript" ></script>
-    <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
-    <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
-  </body>
-</html>
